Refactor MongoDB configuration and update dependencies in pom.xml